# shortener_url

./: .env  .env-template  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
docker/: Dockerfile
src/: urls.py  wsgi.py
src/api/shortener/: apps.py  models.py  serializers.py  urls.py  views.py
src/api/shortener/migrations/: 0001_initial.py
src/settings/: base.py
swagger/: conf.py
